[gd_scene load_steps=4 format=3 uid="uid://dyrshme8bcxd0"]

[ext_resource type="Script" path="res://Scripts/damagepowerup.gd" id="1_s81bv"]
[ext_resource type="Texture2D" uid="uid://bud2jq0vehjfi" path="res://Assets/simple dmg powerup.png" id="2_pvbd2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gfksj"]
size = Vector2(40, 40)

[node name="Node2D" type="Area2D"]
script = ExtResource("1_s81bv")
metadata/_edit_vertical_guides_ = [-124.0]
metadata/_edit_horizontal_guides_ = [37.0]
metadata/damageincrease = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_gfksj")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 21.0
color = Color(1, 1, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.38419e-07, 1)
scale = Vector2(0.0390625, 0.0390625)
texture = ExtResource("2_pvbd2")

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_damage_collect"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
